force-app/main/default/objects/Contact/fields/Ask_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Ask_Sent_Date__c</fullName>
    <label>Ask Sent Date</label>
    <type>Date</type>
</CustomField>