force-app/main/default/objects/Contact/fields/Connector_Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Connector_Activation_Status__c</fullName>
    <label>Activation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Activated</fullName>
                <default>true</default>
                <label>Not Activated</label>
            </value>
            <value>
                <fullName>Ask Pending</fullName>
            </value>
            <value>
                <fullName>Intro Requested</fullName>
            </value>
            <value>
                <fullName>Intro Made</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>