force-app/main/default/objects/Contact/fields/Connector_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Connector_Confidence__c</fullName>
    <label>Connector Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>