force-app/main/default/objects/Contact/fields/Contact_Seniority__c.field-meta.xml
<CustomField>
    <fullName>Contact_Seniority__c</fullName>
    <label>Contact Seniority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Managing Partner</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>EIR</fullName>
            </value>
            <value>
                <fullName>Scout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>