force-app/main/default/objects/Contact/fields/Has_What_sApp__c.field-meta.xml
<CustomField>
    <fullName>Has_What_sApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>What'sApp Active</label>
    <type>Checkbox</type>
</CustomField>