force-app/main/default/objects/Contact/fields/Intro_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Intro_Coverage__c</fullName>
    <description>For Connector contacts: pipe-delimited list of funds and contacts this connector can reach (e.g., "a16z / Angela Strange | a16z / Kimberly Tan").</description>
    <label>Intro Coverage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>