force-app/main/default/objects/Contact/fields/Intro_Made_Date__c.field-meta.xml
<CustomField>
    <fullName>Intro_Made_Date__c</fullName>
    <label>Intro Made Date</label>
    <type>Date</type>
</CustomField>