force-app/main/default/objects/Contact/fields/Investor_Outreach_Status__c.field-meta.xml
<CustomField>
    <fullName>Investor_Outreach_Status__c</fullName>
    <label>Investor Outreach Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Researched</fullName>
            </value>
            <value>
                <fullName>Warm Path Identified</fullName>
            </value>
            <value>
                <fullName>Outreach Sent</fullName>
            </value>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>In Dialogue</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>