force-app/main/default/objects/Contact/fields/kognoz1__External_ID__c.field-meta.xml
<CustomField>
    <fullName>kognoz1__External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>