force-app/main/default/objects/Contact/fields/Platform_User__c.field-meta.xml
<CustomField>
    <fullName>Platform_User__c</fullName>
    <label>Platform Usage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veleiro Discovery Owner</fullName>
            </value>
            <value>
                <fullName>Veleiro Admin Owner</fullName>
            </value>
            <value>
                <fullName>Veleiro Participant</fullName>
            </value>
            <value>
                <fullName>Salesforce User</fullName>
            </value>
            <value>
                <fullName>Salesforce Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>