force-app/main/default/objects/Contact/fields/Relationship_To_Cam__c.field-meta.xml
<CustomField>
    <fullName>Relationship_To_Cam__c</fullName>
    <label>Relationship to Cam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Degree</fullName>
            </value>
            <value>
                <fullName>2nd Degree</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>