force-app/main/default/objects/Contact/fields/Thesis_Fit__c.field-meta.xml
<CustomField>
    <fullName>Thesis_Fit__c</fullName>
    <label>Thesis Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium-High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low-Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Conflict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>