force-app/main/default/objects/Contact/fields/Veleiro_Username__c.field-meta.xml
<CustomField>
    <fullName>Veleiro_Username__c</fullName>
    <description>Username for Veleiro Platform</description>
    <label>Veleiro Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>