force-app/main/default/objects/Contact/fields/Warm_Path_Notes__c.field-meta.xml
<CustomField>
    <fullName>Warm_Path_Notes__c</fullName>
    <description>Which connectors bridge to this investor contact.</description>
    <label>Warm Path Notes</label>
    <type>TextArea</type>
</CustomField>