force-app/main/default/objects/Contact/recordTypes/Connector.recordType-meta.xml
<RecordType>
    <fullName>Connector</fullName>
    <active>true</active>
    <description>Individual who can introduce Veleiro to investors. Not an investor themselves. Tracked via Intro Coverage and Activation Status.</description>
    <label>Connector</label>
</RecordType>