force-app/main/default/objects/Contact/recordTypes/Customer_Standard.recordType-meta.xml
<RecordType>
    <fullName>Customer_Standard</fullName>
    <active>true</active>
    <description>Standard customer Contact. Default Record Type for any contact that is not an investor or connector.</description>
    <label>Customer Contact</label>
</RecordType>