force-app/main/default/objects/Contact/recordTypes/Investor_Contact.recordType-meta.xml
<RecordType>
    <fullName>Investor_Contact</fullName>
    <active>true</active>
    <description>Individual at an investor fund (GP, Partner, Principal, Associate, Analyst, EIR, Scout) tracked for direct fundraising outreach.</description>
    <label>Investor Contact</label>
</RecordType>